--- a/attendance/templates/attendance/classroom_attendance.html
+++ b/attendance/templates/attendance/classroom_attendance.html
@@ -2,9 +2,9 @@
 {% block page_content %}
 <div class='col-md-8 offset-md-2'>
     <h2>{{classroom.name}} Attendance</h2>
-    <form action="/classes/{{classroom.pk}}/attendance/" method='post'>
+    <form action="" method='post'>
     {% csrf_token %}
-    {{attendance_form.as_p}}
+    {{form.as_p}}
     <button type='submit' class='btn btn-primary'>Submit</button>
     </form>
 </div>
