--- a/attendance/templates/attendance/home.html
+++ b/attendance/templates/attendance/home.html
@@ -1,4 +1,8 @@
 {% extends 'base.html' %}
 {% block page_content %}
+
+{% if title %}
+<h5>-{{title}}-</h5>
+{% endif %}
     <p>Welcome</p>
 {% endblock %}
