--- a/attendance/templates/attendance/student_list.html
+++ b/attendance/templates/attendance/student_list.html
@@ -1,34 +1,31 @@
 {% extends 'base.html' %}
 {% block page_content %}
-<div class='col-md-8 offset-md-2'>
-    <h2>{{classroom.name}}</h2>
-    <hr>
-    {% if is_attendance_already_taken %}
-        <a href="{% url 'attendance_edit' attendance.pk %}">Edit Today's Attendance</a>
-    {% else %}
-        <a href="{% url 'class_attendance' classroom.pk %}">Take Attendance</a>
-    {% endif %}
+<div class='col-md-10 offset-md-1'>
+    <h2>Students</h2>
     <table class='table table-striped'>
         <thead>
             <tr>
                 <th scope='col'></th>
                 <th scope='col'>First</th>
                 <th scope='col'>Last</th>
+                <th scope='col'>Class</th>
+                <th scope='col'>Edit Student</th>
+                <th scope='col'>Delete Student</th>
             </tr>
         </thead>
         <tbody>
-            {% for student in students %}
+            {% for student in student_list %}
             <tr>
                 <th scope='row'>{{forloop.counter}}</th>
                 <td>{{student.first_name}}</td>
                 <td>{{student.last_name}}</td>
+                <td>{{student.classroom}}</td>
+                <td><a href="{%url 'student_edit' student.id %}">Edit</a></td>
+                <td><a href="{%url 'student_delete' student.id %}">Delete</a></td>
             </tr>
-            {% endfor %}   
+            {% endfor %}
         </tbody>
     </table>
-    <h4>Add Student:</h4>
-    {% include 'add_student_form.html' with student_form=student_form %}
-    </hr>
     
 </div>
 {% endblock %}
