--- a/attendance/templates/attendance/home.html
+++ b/attendance/templates/attendance/home.html
@@ -4,5 +4,8 @@
 {% if title %}
 <h5>-{{title}}-</h5>
 {% endif %}
-    <p>Welcome</p>
+    <h2>Welcome!</h2>
+    {% if not user.is_authenticated %}
+    <p>Please <a href="{% url 'login' %}">login</a></p>
+    {% endif %}
 {% endblock %}
