--- a/attendance/templates/attendance/student_list.html
+++ b/attendance/templates/attendance/student_list.html
@@ -9,8 +9,10 @@
                 <th scope='col'>First</th>
                 <th scope='col'>Last</th>
                 <th scope='col'>Class</th>
+                {% if user.is_authenticated %}
                 <th scope='col'>Edit Student</th>
                 <th scope='col'>Delete Student</th>
+                {% endif %}
             </tr>
         </thead>
         <tbody>
@@ -20,8 +22,10 @@
                 <td>{{student.first_name}}</td>
                 <td>{{student.last_name}}</td>
                 <td>{{student.classroom}}</td>
+                {% if user.is_authenticated %}
                 <td><a href="{%url 'student_edit' student.id %}">Edit</a></td>
                 <td><a href="{%url 'student_delete' student.id %}">Delete</a></td>
+                {% endif %}
             </tr>
             {% endfor %}
         </tbody>
