--- a/studio/templates/base.html
+++ b/studio/templates/base.html
@@ -15,6 +15,15 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'student_index' %}">Students</a>
             </li>
+            {% if user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+            </li>
+            {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'login' %}">Login</a>
+            </li>
+            {% endif %}
           </ul>
         </div>
     </div>
