--- a/studio/templates/base.html
+++ b/studio/templates/base.html
@@ -26,6 +26,10 @@
             {% endif %}
           </ul>
         </div>
+        <form action="{% url 'student_search' %}" method='get' class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="search" name='q' placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
     </div>
 
 </nav>
