--- a/studio/templates/base.html
+++ b/studio/templates/base.html
@@ -15,6 +15,9 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'student_index' %}">Students</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'attendance_filter' %}">Past Attendance</a>
+            </li>
             {% if user.is_authenticated %}
             <li class="nav-item">
               <a class="nav-link" href="{% url 'logout' %}">Logout</a>
@@ -28,7 +31,7 @@
         </div>
         <form action="{% url 'student_search' %}" method='get' class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="search" name='q' placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Student Search</button>
         </form>
     </div>
 
